WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148528
REGRESSION(
r188548
): TestController state is Resseting while tests are running after
r188548
https://bugs.webkit.org/show_bug.cgi?id=148528
Summary
REGRESSION(r188548): TestController state is Resseting while tests are runnin...
Carlos Garcia Campos
Reported
2015-08-27 08:43:55 PDT
Before
r188548
resetStateToConsistentValues() was called in TestController::run(), before tests are run, but now it's called for every test in TestInvocation::invoke(), after m_status has changed to RunningTest.
Attachments
Patch
(1.73 KB, patch)
2015-08-27 08:46 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-08-27 08:46:05 PDT
Created
attachment 260057
[details]
Patch
WebKit Commit Bot
Comment 2
2015-09-02 01:27:40 PDT
Comment on
attachment 260057
[details]
Patch Rejecting
attachment 260057
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 260057, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Password for '
commit-queue@webkit.org
': Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Username: error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.webkit.org/results/132367
Csaba Osztrogonác
Comment 3
2015-09-02 05:01:05 PDT
Comment on
attachment 260057
[details]
Patch Clearing flags on attachment: 260057 Committed
r189245
: <
http://trac.webkit.org/changeset/189245
>
Csaba Osztrogonác
Comment 4
2015-09-02 05:01:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug