REGRESSION(r188548): TestController state is Resseting while tests are running after r188548 https://bugs.webkit.org/show_bug.cgi?id=148528

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2015-09-02
Reviewed by Darin Adler.

Before r188548 resetStateToConsistentValues() was called in
TestController::run(), before tests are run, but now it's called
for every test in TestInvocation::invoke(), after m_status has
changed to RunningTest.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues): Use
TemporaryChange to reset m_state ot its previous value after reset
is done.

Canonical link: https://commits.webkit.org/166823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189245 268f45cc-cd09-0410-ab3c-d52691b4dbfc